# test-bpan-app

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
Docs/: CHANGELOG.md  PRD.md  Rough idea of project.md  SRS.md
backend/: .dockerignore  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_new_lookup_tables.py  remove_html_column.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  bpan.py  lookup.py  models.py
backend/app/core/: bpan_lookups.py  config.py  security.py
backend/app/models/: __init__.py  battery_model.py  bpan.py  lookup.py  user.py
backend/app/schemas/: battery_model.py  lookup.py  user.py
backend/app/services/: bpan_generator.py  pdf_generator.py
backend/scripts/: seed.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/hooks/: useAuthStore.js
frontend/src/pages/: AdminDashboard.jsx  AdminLookup.jsx  AdminModels.jsx  BPANCreate.jsx  BPANView.jsx  Dashboard.jsx  Login.jsx  Reports.jsx  Signup.jsx
frontend/src/services/: api.js
frontend/src/utils/: constants.js  helpers.js
